# phionyx-research

./: .gitignore  .zenodo.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE_STRATEGY.md  PATENT_NOTICE.md  PATENT_PLEDGE.md  README.md  SECURITY.md  pyproject.toml  setup.py
.claude/agents/: diff-reviewer.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release-testpypi.yml  release.yml
case-studies/agentic-development-2026-05/: README.md  update_snapshot.sh
docs/adr/: 0007-multi-agent-envelope-chain.md
docs/comparisons/: phionyx-vs-agent-frameworks.md
docs/conventions/: otel_semantic_bump_policy.md
docs/mappings/: README.md  eu-ai-act.md  iso-42001.md  nist-ai-rmf.md  owasp-agentic-ai-2025.md
docs/provenance/: README.md  architecture_md_authoring_chain.jsonl  verify_chain.py
docs/releases/: RELEASE_NOTE_v0.8.0.md  v0.6.0_RELEASE_NOTES.md  v0.7.0_RELEASE_NOTES.md
docs/strategic/: agent_memory_review_2026_05_27.md  runtime_evidence_self_audit_2026-05-27.md
examples/: README.md  comparison_langchain.py  fastapi_demo.py
examples/adversarial/: README.md  _common.py  audit_replay_after_block.py  policy_conflict_resolution.py  prompt_injection_tool_call.py  unsafe_action_blocked.py
examples/before_after/: README.md  with_phionyx_vs_without.py
examples/cli/: health_check.py  run_governed.py
examples/comparison/: README.md  with_orchestrator.py
examples/envelopes/: governed_response.json  governed_response.schema.json  v0_6_schema_portfolio.md  v0_7_schema_portfolio.md  validate.py
examples/fastapi/: README.md  main.py
examples/hearthos_traces/: demo-boundary-script-v1.jsonl  demo-diagnostic-v1.jsonl  demo-weekly-reset-v1.jsonl
examples/notebooks/: 01_determinism_and_physics.ipynb  02_kill_switch_in_action.ipynb  03_pipeline_blocks_and_audit.ipynb  04_governed_envelope.ipynb  phionyx_quickstart.ipynb
examples/otel_export/: README.md  docker-compose.yml  grafana-datasources.yaml  run_example.py  tempo.yaml
examples/physics/: README.md  npc_drift_demo.py
examples/profiles/: README.md  creative_writing.yaml  customer_support.yaml  education.yaml
phionyx_core/: __init__.py
phionyx_core/causality/: __init__.py  causal_graph.py  counterfactual.py  intervention.py  root_cause.py  simulator.py  structure_learning.py
phionyx_core/cep/: __init__.py  cep_config.py  cep_engine.py  cep_types.py  echo_self_guard.py
phionyx_core/config/: karpathy_production_config.py
phionyx_core/context/: __init__.py  composer.py  definitions.py  detector.py  manager.py  multi_intent.py
phionyx_core/contracts/: LEARNING_GATE_CONTRACT_V1.md  __init__.py  agent_envelope_schema.json  config.py  database.py  kernel_execution_contract_v1.0.md  llm_provider.py  participants.py  state_migration_contract_v1.0.md  state_schema.json  telemetry_contract.json
phionyx_core/docs/: API_REFERENCE.md  EXAMPLES.md
phionyx_core/evaluation/: __init__.py  report_generator.py  scoring.py  task_set.py
phionyx_core/governance/: deliberative_ethics.py  failure_classifier.py  human_in_the_loop.py  kill_switch.py  rbac.py
phionyx_core/intuition/: __init__.py  chronicle_graph.py  graph_engine.py  visualizer.py
phionyx_core/memory/: __init__.py  consolidation.py  embedding_cache.py  emotion_cache.py  forgetting.py  rag_cache.py  trace.py  trace_store.py  trace_weight_standard.py  user_profile.py  vector_store.py
phionyx_core/meta/: __init__.py  arbitration_math.py  autonomous_thought.py  consciousness_aggregator.py  counterfactual_self.py  deception_detector.py  estimator.py  identity_persistence.py  knowledge_boundary.py  mind_loop_validator.py  notification_log.py  novelty.py  ood_scorer.py  self_model.py  self_model_drift.py  staleness.py  uncertainty.py
phionyx_core/metrics/: __init__.py  emotional_kpi_engine.py  emotional_kpi_thresholds.yaml
phionyx_core/monitoring/: __init__.py  baseline_store.py  behavioral_drift.py  circuit_breaker.py  human_approval.py  safe_mode_fallback.py
phionyx_core/narrative/: __init__.py  engine.py  lore_mapping.py
phionyx_core/orchestrator/: __init__.py  block_dependencies.json  block_factory.py  dependency_validator.py  dynamic_grouping.py  early_exit_optimizer.py  echo_orchestrator.py  execution_guard.py  karpathy_integration.py  parallel_executor.py  rollback_manager.py
phionyx_core/pedagogy/: __init__.py  audit.py  guardrails.py  shaper.py  templates.py
phionyx_core/persistence/: __init__.py  config.py  in_memory_state_store.py  postgres_state_store.py
phionyx_core/physics/: __init__.py  coherence.py  constants.py  core_math.py  dominance.py  dynamics.py  empathy.py  entropy_modulation.py  formulas.py  inertia.py  profiles.py  profiles.yaml  semantic_time_decay.py  text_physics.py  tuner.py  types.py  wasm_ready.py
phionyx_core/pipeline/: __init__.py  base.py
phionyx_core/planning/: __init__.py  goal_decomposer.py  goal_persistence.py
phionyx_core/policy/: __init__.py  engine.py  policies.py
phionyx_core/ports/: __init__.py  goal_port.py  intuition_port.py  learning_record_port.py  memory_port.py  meta_port.py  narrative_port.py  null_implementations.py  ood_scorer_port.py  pedagogy_port.py  physics_port.py  policy_port.py  security_port.py
phionyx_core/profiles/: __init__.py  compiler.py  loader.py  manager.py  profile_configs.py  profile_manager.py  runtime_profiles.py  schema.py
phionyx_core/research_engine/: PROGRAM.md  __init__.py  config.py  decision.py  exploration_window.py  loop.py  outcome_observer.py  schemas.py
phionyx_core/schemas/: __init__.py  npc_echo_profile.py  npc_echo_profile_integration.py
phionyx_core/services/: assumption_challenge_module.py  assumption_engine.py  assumption_types.py  clarification_engine.py  complexity_engine.py  dead_code_pruner.py  global_workspace.py  goal_registry.py  inconsistency_engine.py  (+9 more)
scripts/: demo.sh  make_reproducibility_pack.py
tests/: conftest.py  test_control_eval_suite.py
(+368 files in other folders)
