[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phionyx-core"
version = "0.2.0"
description = "Deterministic, auditable AI cognition runtime — not an LLM wrapper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Phionyx Research", email = "founder@phionyx.ai"}
]
keywords = [
    "ai",
    "cognitive-architecture",
    "deterministic",
    "echoism",
    "phionyx",
    "physics-engine",
    "pipeline",
    "auditable",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Minimal core dependencies — only what phionyx_core hard-requires at import time
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Graph / intuition layer (networkx for CausalGraph, graph_engine)
graph = [
    "networkx>=3.0",
]
# OpenTelemetry instrumentation
telemetry = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
]
# Postgres persistence adapter
postgres = [
    "asyncpg>=0.28.0",
]
# Supabase persistence adapter
supabase = [
    "supabase>=2.0.0",
]
# Everything a developer needs to contribute
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]
# All optional runtime adapters
all = [
    "phionyx-core[graph,telemetry]",
]

[project.urls]
Homepage = "https://phionyx.ai"
Documentation = "https://phionyx.ai/docs"
Repository = "https://github.com/halvrenofviryel/phionyx-research"
Issues = "https://github.com/halvrenofviryel/phionyx-research/issues"
Changelog = "https://github.com/halvrenofviryel/phionyx-research/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["."], include = ["phionyx_core*"]}}

[tool.setuptools.package-data]
"phionyx_core" = [
    "*.json",
    "*.yaml",
    "*.yml",
    "contracts/**/*.json",
    "profiles/**/*.yaml",
    "templates/**/*.json",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (formatter handles this)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["phionyx_core"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
