[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phionyx-core"
version = "0.4.0"
description = "Phionyx Core SDK - AI↔AI Mediator and Echo Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Phionyx Labs", email = "dev@phionyx.ai"}
]
keywords = ["phionyx", "ai", "llm", "mediator", "echo-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Minimal core dependencies
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jsonpath-ng>=1.6.1",  # Required for oracle evaluator (hard requirement)
    "pyyaml>=6.0",  # Required for physics profiles
    "numpy>=1.24.0",  # Required for UKF state estimation
]

# Optional dependencies
[project.optional-dependencies]
# OpenTelemetry dependencies (optional - graceful degradation if not installed)
otel = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]
# Benchmark extras
bench = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "jsonschema>=4.0.0",
    "jsonpath-ng>=1.6.0",
    "networkx>=3.0",
]
# Supabase extras
supabase = [
    "supabase>=2.0.0",
]
# Echo Server dependencies
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
]
# Full extras (all optional dependencies)
all = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "jsonschema>=4.0.0",
    "jsonpath-ng>=1.6.0",
    "networkx>=3.0",
    "hypothesis>=6.0.0",
    "prometheus_client>=0.17.0",
    "supabase>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
]

[project.scripts]
phionyx = "scripts.phionyx_cli:main"
phionyx-bench = "scripts.phionyx_bench_cli:main"

[project.urls]
Homepage = "https://github.com/phionyx/phionyx"
Documentation = "https://phionyx.ai/docs"
Repository = "https://github.com/phionyx/phionyx"
Issues = "https://github.com/phionyx/phionyx/issues"

[tool.setuptools.packages.find]
include = ["phionyx_core*", "phionyx_bridge*", "phionyx_agents*", "benchmarks*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml", "*.yml"]

# Coverage configuration
[tool.coverage.run]
source = ["echo-server/app", "adapters", "scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/legacy/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Coverage thresholds (fail if below these percentages)
[tool.coverage.report.fail_under]
# Overall coverage threshold
total = 80

# Per-module thresholds (can be adjusted per module)
[tool.pytest.ini_options]
# Coverage options for pytest-cov
addopts = """
    --cov=echo-server/app
    --cov=adapters
    --cov=scripts
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml:coverage.xml
    --cov-fail-under=80
"""

[dependency-groups]
bench = [
    "jsonpath-ng (>=1.7.0,<2.0.0)"
]
