[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phionyx-core"
version = "0.8.0"
description = "Phionyx Core SDK - AI↔AI Mediator and Echo Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Phionyx Labs", email = "dev@phionyx.ai"}
]
keywords = ["phionyx", "ai", "llm", "mediator", "echo-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Minimal core dependencies
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jsonpath-ng>=1.6.1",  # Required for oracle evaluator (hard requirement)
    "pyyaml>=6.0",  # Required for physics profiles
    "numpy>=1.24.0",  # Required for UKF state estimation
]

# Optional dependencies
[project.optional-dependencies]
# Development extras — used by CI (.github/workflows/ci.yml runs
# `pip install -e ".[dev]"` followed by ruff / mypy / pytest steps).
# Restored 2026-05-25 after v0.5.0 era CI silently broke: the [dev] key
# had been referenced by ci.yml but not declared here, so pip-install
# succeeded with zero dev tools and every CI step subsequently failed
# at "command not found". See ADR-0008 (CI governance) for the
# branch-protection rule that now prevents shipping without green CI.
dev = [
    # Lint
    "ruff>=0.6.0",
    # Type check (CI runs `mypy phionyx_core` over 327+ source files)
    "mypy>=1.10.0",
    # Test runner + ecosystem
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
    # JSON Schema (Draft 2020-12) — used by the v0.6.0 subagent_chain
    # contract test + the OWASP / EU-AI-Act compliance-mapping validators.
    "jsonschema>=4.0.0",
    # OTel optional — kept thin; full stack lives in [otel] extras.
    "opentelemetry-api>=1.21.0",
]
# OpenTelemetry dependencies (optional - graceful degradation if not installed)
otel = [
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]
# Benchmark extras
bench = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "jsonschema>=4.0.0",
    "jsonpath-ng>=1.6.0",
    "networkx>=3.0",
]
# Supabase extras
supabase = [
    "supabase>=2.0.0",
]
# Echo Server dependencies
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
]
# Full extras (all optional dependencies)
all = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "jsonschema>=4.0.0",
    "jsonpath-ng>=1.6.0",
    "networkx>=3.0",
    "hypothesis>=6.0.0",
    "prometheus_client>=0.17.0",
    "supabase>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "httpx>=0.25.0",
    "structlog>=23.0.0",
]

[project.scripts]
phionyx = "scripts.phionyx_cli:main"
phionyx-bench = "scripts.phionyx_bench_cli:main"

[project.urls]
Homepage = "https://github.com/halvrenofviryel/phionyx-research"
Documentation = "https://phionyx.ai/docs"
Repository = "https://github.com/halvrenofviryel/phionyx-research"
Issues = "https://github.com/halvrenofviryel/phionyx-research/issues"

[tool.setuptools.packages.find]
include = ["phionyx_core*", "phionyx_bridge*", "phionyx_agents*", "benchmarks*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.yaml", "*.yml"]

# --- mypy configuration ---------------------------------------------------
# Wave 6 (2026-05-02) locked phionyx_core/ at zero mypy errors with all
# optional-dependency type stubs available locally. CI cannot install
# every transitive optional dependency (sklearn, asyncpg, opentelemetry,
# guardrails, etc.) without ballooning install time, so we skip missing
# imports for the runtime-optional surface and keep strict checking on
# Phionyx's own code. The 2026-05-25 v0.6.0 CI restoration added this
# block; mypy now passes against phionyx_core/ with only [dev] extras
# installed.
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# pydantic.mypy plugin lets mypy read Pydantic v2 Field(default=...) /
# Field(None, ...) semantics. WITHOUT this plugin, mypy treats every
# Pydantic model field as a required __init__ argument regardless of
# default — which is what produced 22 spurious "Missing named argument"
# errors against contracts in v4/, telemetry/, etc. (cascade discovered
# while restoring CI for v0.6.0).
plugins = ["pydantic.mypy"]
# Keep these on so real type errors in phionyx_core itself still fail CI.
check_untyped_defs = false
# warn_unused_ignores is FALSE because phionyx_core uses conditional
# `try: from opentelemetry import trace; Status = trace.Status` /
# `except ImportError: Status = None  # type: ignore` patterns. The
# type: ignore is correct when opentelemetry is not installed (CI
# environment with thin [dev] extras) and "unused" only when otel
# happens to be installed locally. Forcing this on would oscillate
# the build green/red based on which optional deps are installed.
warn_unused_ignores = false
warn_redundant_casts = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
# These per-module overrides silence imports for runtime-optional
# packages that are NOT installed in CI's [dev] environment.
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "asyncpg.*",
    "opentelemetry.*",
    "guardrails.*",
    "shaper.*",
    "templates.*",
    "audit.*",
    "phionyx_intuition.*",
    "supabase.*",
    "litellm.*",
    "structlog.*",
    "prometheus_client.*",
    "fastapi.*",
    "uvicorn.*",
    "httpx.*",
]
ignore_missing_imports = true


# Coverage configuration
[tool.coverage.run]
source = ["echo-server/app", "adapters", "scripts"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/legacy/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Coverage thresholds (fail if below this percentage).
# Pre-2026-05-25 form `[tool.coverage.report.fail_under] total = 80`
# was rejected by coverage.py (it expects a float, not a sub-table)
# and silently broke pytest invocations under any --cov plugin. Now
# expressed as a single float in the parent [tool.coverage.report]
# block.

# Per-module thresholds (can be adjusted per module)
[tool.pytest.ini_options]
# pytest-asyncio auto-mode: treat plain `async def test_*` functions as
# async tests without needing an explicit @pytest.mark.asyncio decorator.
# Required for tests/core/pipeline/test_agi_pipeline_blocks.py (added 2026-05-17).
asyncio_mode = "auto"
# Pre-2026-05-25 form had `addopts` loading --cov against monorepo-only
# directories (echo-server/app, adapters, scripts) that do not exist
# in the public phionyx-research checkout. The pytest-cov plugin then
# crashed at config-load time with "Option [tool.coverage.report]
# fail_under is not a float" and prevented every test from running.
# Coverage targets for CI now come from explicit --cov flags on the
# CI command line where applicable; the public-repo default is to run
# tests without coverage instrumentation.

[dependency-groups]
bench = [
    "jsonpath-ng (>=1.7.0,<2.0.0)"
]
